<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.zkoss.ztl</groupId>
    <artifactId>ztltest</artifactId>
    <version>3.141.59-SNAPSHOT</version>
    <name>ZTL Test cases</name>
    <description>A sets of testing cases for ZK project</description>
    <properties>
        <selenium.version>3.141.59</selenium.version>
        <scala.version>2.12.4</scala.version>
		<commons-io>2.7</commons-io>
        <report.dir>report/</report.dir>
        <test.dir>target/classes</test.dir>
    </properties>
    <repositories>
        <repository>
            <id>zk repository</id>
            <url>http://mavensync.zkoss.org/maven2</url>
        </repository>
        <repository>
            <id>maven central</id>
            <name>Maven2 Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <licenses>
        <license>
            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
            <url>http://www.gnu.org/licenses/lgpl.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <pluginRepositories>
        <pluginRepository>
            <id>maven central-plugin</id>
            <name>Maven2 Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
    <dependencies>
        <dependency>
            <groupId>org.zkoss.ztl</groupId>
            <artifactId>ztl</artifactId>
            <version>3.141.59-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>3.16.3</version>
        </dependency>
        <dependency>
            <groupId>commons-jxpath</groupId>
            <artifactId>commons-jxpath</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
			<artifactId>scalatest_2.12</artifactId>
			<version>3.0.5</version>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-compiler</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-reflect</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <dependency>
            <groupId>net.alchim31.maven</groupId>
            <artifactId>scala-maven-plugin</artifactId>
            <version>3.3.1</version>
        </dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io}</version>
		</dependency>
    </dependencies>
    <build>
        <sourceDirectory>zstl/src</sourceDirectory>
        <testSourceDirectory>zstl/test</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <sendJavaToScalac>false</sendJavaToScalac>
                    <sourceDir>zstl/src</sourceDir>
                    <testSourceDir>zstl/test</testSourceDir>
                    <excludes>
                        <exclude>ExampleTest.scala</exclude>
                    </excludes>
                    <jvmArgs>
                        <jvmArg>-Xms256m</jvmArg>
                        <jvmArg>-Xmx1024m</jvmArg>
                    </jvmArgs>
                    <args>
                        <arg>-target:jvm-1.8</arg>
                        <arg>-deprecation</arg>
                        <arg>-unchecked</arg>
                        <arg>-uniqid</arg>
                        <arg>-no-specialization</arg>
                        <arg>-encoding</arg>
                        <arg>UTF-8</arg>
                        <arg>-feature</arg>
                    </args>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <id>add-resource</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.basedir}/codegen</source>
                                <source>${project.basedir}/zstl/test</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <runOrder>alphabetical</runOrder>
                    <!--  <forkedProcessTimeoutInSeconds>100</forkedProcessTimeoutInSeconds>  -->
                    <testClassesDirectory>${test.dir}</testClassesDirectory>
                    <additionalClasspathElements>
                        <additionalClasspathElement>lib</additionalClasspathElement>
                    </additionalClasspathElements>
                    <includes>
                        <include>**/*Test.*</include>
                    </includes>
                    <reportsDirectory>${report.dir}</reportsDirectory>
                    <forkCount>2</forkCount>
                    <argLine>-Xmx256m -XX:MaxPermSize=128m</argLine>
                    <reuseForks>true</reuseForks>
                </configuration>
            </plugin>
        </plugins>
    </build>
	<profiles>
		<profile>
			<id>testcafe</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.17</version>
						<configuration>
							<runOrder>alphabetical</runOrder>
							<testClassesDirectory>${test.dir}</testClassesDirectory>
							<additionalClasspathElements>
								<additionalClasspathElement>lib</additionalClasspathElement>
							</additionalClasspathElements>
							<includes>
								<include>**/*TestCafe.*</include>
							</includes>
							<reportsDirectory>${report.dir}</reportsDirectory>
							<forkCount>2</forkCount>
							<argLine>-Xmx256m -XX:MaxPermSize=128m</argLine>
							<reuseForks>true</reuseForks>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>